--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,14 @@
         android:visibility="gone" />
 
     <Button
+        android:id="@+id/showBirthdays_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/VKButtonTheme"
+        android:text="@string/showBirthdays"
+        android:visibility="gone" />
+
+    <Button
         android:id="@+id/logout_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
