--- a/app/src/main/res/layout/birthday.xml
+++ b/app/src/main/res/layout/birthday.xml
@@ -30,7 +30,7 @@
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvNews"
+        android:id="@+id/rvBirthday"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
